# bc-integrity

./: README.md  cppcheck-suppressions.txt  meson.build  meson_options.txt  valgrind.supp
.claude/: CLAUDE.md
.github/workflows/: ci.yml
fuzzing/: fuzz_bc_integrity_capture_meta.c  fuzz_bc_integrity_cli_parsers.c  fuzz_bc_integrity_diff.c  fuzz_bc_integrity_filter_glob.c  fuzz_bc_integrity_manifest_reader.c  fuzz_bc_integrity_walk_filters.c  meson.build
fuzzing/corpus/bc_integrity_manifest_reader/: seed_manifest.hrbl
include/internal/: bc_integrity_capture_hash_internal.h  bc_integrity_capture_internal.h  bc_integrity_cli_internal.h  bc_integrity_diff_internal.h  bc_integrity_dispatch_internal.h  bc_integrity_entry_internal.h  bc_integrity_filter_internal.h  bc_integrity_manifest_internal.h  bc_integrity_verify_internal.h  bc_integrity_walk_internal.h
scripts/: bench.sh
src/: bc_integrity_main.c  meson.build
src/capture/: bc_integrity_capture_entry.c  bc_integrity_capture_hash_batch_uring.c  bc_integrity_capture_hash_simple.c
src/cli/: bc_integrity_cli_parsers.c  bc_integrity_cli_spec.c
src/diff/: bc_integrity_diff.c
src/dispatch/: bc_integrity_dispatch.c
src/filter/: bc_integrity_filter_glob.c
src/manifest/: bc_integrity_manifest_writer.c
src/verify/: bc_integrity_verify_content.c  bc_integrity_verify_meta.c  bc_integrity_verify_output.c  bc_integrity_verify_run.c  bc_integrity_verify_strict.c
src/walk/: bc_integrity_walk_filters.c  bc_integrity_walk_parallel.c  bc_integrity_walk_serial.c
tests/: meson.build  test_bc_integrity_capture_entry_unit.c  test_bc_integrity_capture_hash_unit.c  test_bc_integrity_capture_hash_uring_extended.c  test_bc_integrity_cli_parsers_extended.c  test_bc_integrity_cli_parsers_unit.c  test_bc_integrity_cli_spec_unit.c  test_bc_integrity_coverage_d.c  test_bc_integrity_diff_end_to_end.c  test_bc_integrity_diff_extended.c  test_bc_integrity_diff_unit.c  test_bc_integrity_dispatch_extended.c  test_bc_integrity_dispatch_smallcorpus_unit.c  test_bc_integrity_dispatch_unit.c  test_bc_integrity_end_to_end.c  test_bc_integrity_filter_glob_cap_unit.c  test_bc_integrity_filter_glob_extended.c  test_bc_integrity_filter_glob_unit.c  test_bc_integrity_hrbl_compat.c  test_bc_integrity_manifest_writer_extended.c  test_bc_integrity_manifest_writer_unit.c  test_bc_integrity_reproducibility.c  test_bc_integrity_smoke_unit.c  test_bc_integrity_verify_content_unit.c  test_bc_integrity_verify_end_to_end.c  test_bc_integrity_verify_meta_unit.c  test_bc_integrity_verify_output_extended.c  test_bc_integrity_verify_run_extended.c  test_bc_integrity_verify_strict_unit.c  test_bc_integrity_walk_filters_extended.c  test_bc_integrity_walk_filters_unit.c  test_bc_integrity_walk_parallel_extended.c  test_bc_integrity_walk_serial_unit.c
tests/smoke/: smoke_golden_path.sh
